--- a/NumericAndTryParse/NumericAndTryParse.csproj
+++ b/NumericAndTryParse/NumericAndTryParse.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24E32DB9-B80C-485A-B08C-F45886D23C87}</ProjectGuid>
+    <ProjectGuid>{26A02734-9994-43E8-8FFF-B0CBCA149EA0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercise2_oddEvenChecker</RootNamespace>
-    <AssemblyName>Exercise2-oddEvenChecker</AssemblyName>
+    <RootNamespace>NumericAndTryParse</RootNamespace>
+    <AssemblyName>NumericAndTryParse</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
