--- a/Small Calci/Small Calci.csproj
+++ b/Small Calci/Small Calci.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4DA2AD40-456E-402D-8563-77884C8DAD06}</ProjectGuid>
+    <ProjectGuid>{5F9B1F61-DE71-4375-8C7D-57577EDF42A4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercise3___FizzBuzz</RootNamespace>
-    <AssemblyName>Exercise3 - FizzBuzz</AssemblyName>
+    <RootNamespace>Small_Calci</RootNamespace>
+    <AssemblyName>Small Calci</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
