--- a/StringOperations/StringOperations.csproj
+++ b/StringOperations/StringOperations.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4DA2AD40-456E-402D-8563-77884C8DAD06}</ProjectGuid>
+    <ProjectGuid>{6C1B39E6-95CF-4B2D-BF4D-3F3D31A9763C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercise3___FizzBuzz</RootNamespace>
-    <AssemblyName>Exercise3 - FizzBuzz</AssemblyName>
+    <RootNamespace>StringOperations</RootNamespace>
+    <AssemblyName>StringOperations</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
