--- a/Typecasting/Typecasting.csproj
+++ b/Typecasting/Typecasting.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4DA2AD40-456E-402D-8563-77884C8DAD06}</ProjectGuid>
+    <ProjectGuid>{F5000523-F261-41D0-8A44-7152D5D73B6F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercise3___FizzBuzz</RootNamespace>
-    <AssemblyName>Exercise3 - FizzBuzz</AssemblyName>
+    <RootNamespace>Typecasting</RootNamespace>
+    <AssemblyName>Typecasting</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
